# biliplayer-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  debug_resize.mjs  dev.mjs  index.html  lint-staged.config.js  main.js  package-lock.json  package.json  tsconfig.json  vite.config.electron.ts  vite.config.ts  vitest.config.ts  文档重构1.md
.github/workflows/: ci.yml
.harness/: README.md  agent-owner.md
.harness/references/: index.md
.harness/rules/: README.md  boundary.md  protocol.md  recording.md  testing.md  workflow.md
.harness/skills/: README.md  coding-practice.md  requirement-analysis.md  self-review.md  verification.md
.harness/templates/: README.md  requirement.md  review.md  task-checklist.md  verification-report.md
electron/: appCore.ts  bilibiliApi.ts  ipcHandlers.ts  main.ts  preload.cjs  preload.ts  windowManager.ts
electron/__tests__/: audioExpiry.test.ts  features.test.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: bilibili.rs  mod.rs  store.rs  window.rs
src/contexts/: PlayerContext.tsx  usePlayerContextValue.ts
src/hooks/: useAudioPlayer.ts  useDrag.ts  useDragReorder.ts  useFavoriteActions.ts  useFloatingPlayerDrag.ts  useLerpAnimation.ts  usePlayerController.ts  usePlayerStore.ts  useResize.ts
src/services/: api.ts  audioCache.ts  audioEngine.ts
src/stores/: favoritesStore.ts  playlistStore.ts  recentStore.ts  windowStore.ts
src/styles/: design-tokens.css  global.css  tokens.css
src/types/: api.ts  electron.d.ts  index.ts  ipc.ts
test/: bug.md
(+40 files in other folders)
